--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "inngest:dev": "inngest-cli dev",
+    "dev:all": "mprocs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -49,6 +51,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "global": "^4.4.0",
+    "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
@@ -72,6 +76,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "inngest-cli": "^1.12.1",
+    "mprocs": "^0.7.3",
     "prettier": "^3.6.2",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
