--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@ai-sdk/google": "^2.0.25",
     "@ai-sdk/openai": "^2.0.57",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/better-auth": "^1.2.1",
+    "@polar-sh/sdk": "^0.40.3",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -49,7 +51,7 @@
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
     "ai": "^5.0.82",
-    "better-auth": "^1.3.27",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
