--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "global": "^4.4.0",
     "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
+    "jotai": "^2.15.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
