--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ai-sdk/google": "^2.0.25",
     "@ai-sdk/openai": "^2.0.57",
     "@hookform/resolvers": "^5.2.2",
+    "@inngest/realtime": "^0.4.4",
     "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.2.1",
     "@polar-sh/sdk": "^0.40.3",
