feat: add Stripe trigger functionality and webhook handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["cuid", "Nodebase", "nuqs", "Retriable", "toposort"]
+  "cSpell.words": [
+    "cuid",
+    "livemode",
+    "Nodebase",
+    "nuqs",
+    "Retriable",
+    "toposort"
+  ]
 }
